# webb

./: .gitattributes  .gitignore  .prettierignore  Cargo.toml  README.md  env-vars.ps1  leptosfmt.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  svelte.config.js  tauri.conf.json  tsconfig.json
.github/dep-cache/: action.yml
.github/dep-check/: action.yml
.github/workflows/: check.yml  (+1 more)
.vim/: coc-settings.json
lib/tauri-plugin-webb-networking/: Cargo.toml  README.md  package.json
lib/tauri-plugin-webb-networking/examples/tauri-app/: package.json
lib/tauri-plugin-webb-networking/examples/tauri-app/src/: App.svelte
lib/tauri-plugin-webb-networking/examples/tauri-app/src-tauri/: Cargo.toml
lib/tauri-plugin-webb-networking/examples/tauri-app/src-tauri/src/: lib.rs
lib/tauri-plugin-webb-networking/guest-js/: index.ts
lib/tauri-plugin-webb-networking/src/: desktop.rs  lib.rs  mobile.rs
mtg-strategy-tester/: package.json  tsconfig.json
native/: .gitignore  .prettierignore  .taurignore  Cargo.toml  README.md  index.html  next.config.js  package.json  svelte.config.js  tailwind.config.ts  tauri.conf.json  tsconfig.json  vite.config.js
native-old/: .eslintignore  .gitignore  .prettierignore  .taurignore
networking/: .gitignore  Cargo.toml  api-iife.js  build.rs  package.json  rollup.config.js  tsconfig.json
server/: Cargo.toml  README.md
src-tauri/: Cargo.toml  tauri.conf.json
tauri-plugin-webb-quic/: Cargo.toml  README.md  package.json
ui-shared/: package.json  tsconfig.json
web/: README.md  constants.ts  package.json  tsconfig.json
(+173 files in other folders)
